@@ -108,8 +108,8 @@ public class HUTransformServiceReceiptCandidatesTests
 		final I_M_ReceiptSchedule receiptSchedule = InterfaceWrapperHelper.newInstance(I_M_ReceiptSchedule.class);
 		receiptSchedule.setM_Warehouse_ID(warehouseId.getRepoId());
 		receiptSchedule.setC_BPartner_ID(bpartnerId.getRepoId());
-		receiptSchedule.setM_Product_ID(storages.get(0).getProductId().getRepoId());
-		receiptSchedule.setC_UOM_ID(storages.get(0).getC_UOM().getC_UOM_ID());
+		receiptSchedule.setM_Product_ID(storages.getFirst().getProductId().getRepoId());
+		receiptSchedule.setC_UOM_ID(storages.getFirst().getC_UOM().getC_UOM_ID());
 		InterfaceWrapperHelper.save(receiptSchedule);
 
 		final I_M_HU lu;
@@ -186,7 +186,7 @@ public class HUTransformServiceReceiptCandidatesTests
 		XmlAssert.assertThat(cuToSplitXML).valueByXPath("count(HU-VirtualPI[@HUStatus='P'])").isEqualTo("1");
 		XmlAssert.assertThat(cuToSplitXML).valueByXPath("count(HU-VirtualPI/Storage[@M_Product_Value='Tomato' and @Qty='39.000' and @C_UOM_Name='Kg'])").isEqualTo("1");
 
-		final Node newTUXML = HUXmlConverter.toXml(newTUs.get(0));
+		final Node newTUXML = HUXmlConverter.toXml(newTUs.getFirst());
 
 		XmlAssert.assertThat(newTUXML).valueByXPath("count(HU-TU_Bag[@HUStatus='P'])").isEqualTo("1");
 		XmlAssert.assertThat(newTUXML).valueByXPath("string(HU-TU_Bag/@HUPlanningReceiptOwnerPM)").isEqualTo(Boolean.toString(isOwnPackingMaterials));
@@ -206,7 +206,7 @@ public class HUTransformServiceReceiptCandidatesTests
 		{ // verify that cuHU and rs1 are properly linked
 			final List<IHUDocument> rs1HuDocument = huDocumentFactoryService.createHUDocuments(data.helper.getHUContext().getCtx(), rs1TableRef.getTableName(), rs1TableRef.getRecord_ID());
 			assertThat(rs1HuDocument).hasSize(1);
-			assertThat(rs1HuDocument.get(0).getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cuHU.getM_HU_ID() || hu.getM_HU_ID() == tuToSplit.getM_HU_ID())).isTrue();
+			assertThat(rs1HuDocument.getFirst().getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cuHU.getM_HU_ID() || hu.getM_HU_ID() == tuToSplit.getM_HU_ID())).isTrue();
 		}
 
 		assertThat(handlingUnitsBL.isAggregateHU(tuToSplit)).isFalse(); // guard; make sure it's "real"
@@ -222,7 +222,7 @@ public class HUTransformServiceReceiptCandidatesTests
 		assertThat(newLUs).hasSize(1); // we transfered 20kg, the target TUs are still IFCOs one IFCO still holds 40kg, one LU holds 5 IFCOS, so we expect one LU with one IFCO to suffice
 		// data.helper.commitAndDumpHU(newLUs.get(0));
 		// the LU shall contain 'tuToSplit'
-		final Node newLUXML = HUXmlConverter.toXml(newLUs.get(0));
+		final Node newLUXML = HUXmlConverter.toXml(newLUs.getFirst());
 		XmlAssert.assertThat(newLUXML).doesNotHaveXPath("HU-LU_Palet/M_HU_Item_Parent_ID"); // verify that the LU has no parent HU
 		XmlAssert.assertThat(newLUXML).valueByXPath("string(HU-LU_Palet/@HUPlanningReceiptOwnerPM)").isEqualTo(Boolean.toString(isOwnPackingMaterials));
 
@@ -253,19 +253,19 @@ public class HUTransformServiceReceiptCandidatesTests
 		{ // verify that cuHU and rs1 are properly linked
 			final List<IHUDocument> rs1HuDocument = huDocumentFactoryService.createHUDocuments(data.helper.getHUContext().getCtx(), rs1TableRef.getTableName(), rs1TableRef.getRecord_ID());
 			assertThat(rs1HuDocument).hasSize(1);
-			assertThat(rs1HuDocument.get(0).getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cu1.getM_HU_ID() || hu.getM_HU_ID() == existingTU.getM_HU_ID())).isTrue();
+			assertThat(rs1HuDocument.getFirst().getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cu1.getM_HU_ID() || hu.getM_HU_ID() == existingTU.getM_HU_ID())).isTrue();
 		}
 
 		final IHUProducerAllocationDestination producer = HUProducerDestination.ofVirtualPI()
 				.setLocatorId(data.defaultLocatorId);
 		data.helper.load(producer, data.helper.pSaladProductId, new BigDecimal("3"), data.helper.uomKg);
-		final I_M_HU cu2 = producer.getCreatedHUs().get(0);
+		final I_M_HU cu2 = producer.getCreatedHUs().getFirst();
 		final I_M_ReceiptSchedule rs2 = create_receiptSchedule_for_CU(cu2, "3");
 		final TableRecordReference rs2TableRef = TableRecordReference.of(rs2);
 		{ // verify that secondCU and rs2 are properly linked
 			final List<IHUDocument> rs2HuDocument = huDocumentFactoryService.createHUDocuments(data.helper.getHUContext().getCtx(), rs2TableRef.getTableName(), rs2TableRef.getRecord_ID());
 			assertThat(rs2HuDocument).hasSize(1);
-			assertThat(rs2HuDocument.get(0).getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cu2.getM_HU_ID() || hu.getM_HU_ID() == existingTU.getM_HU_ID())).isTrue();
+			assertThat(rs2HuDocument.getFirst().getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cu2.getM_HU_ID() || hu.getM_HU_ID() == existingTU.getM_HU_ID())).isTrue();
 		}
 
 		// invoke the method under test.
@@ -299,7 +299,7 @@ public class HUTransformServiceReceiptCandidatesTests
 			final List<I_M_ReceiptSchedule_Alloc> rsas1 = huReceiptScheduleDAO.retrieveAllHandlingUnitAllocations(receiptScheduleForCU1, data.helper.getHUContext().getTrxName());
 			final List<I_M_ReceiptSchedule_Alloc> rsas1ForCu1 = rsas1.stream().filter(rsa -> rsa.getM_TU_HU_ID() == existingTU.getM_HU_ID() && rsa.getVHU_ID() == cu1.getM_HU_ID()).collect(Collectors.toList());
 			assertThat(rsas1ForCu1).hasSize(1);
-			assertThat(rsas1ForCu1.get(0).getHU_QtyAllocated()).isEqualByComparingTo(new BigDecimal("2"));
+			assertThat(rsas1ForCu1.getFirst().getHU_QtyAllocated()).isEqualByComparingTo(new BigDecimal("2"));
 		}
 		{
 			// // verify c2 which got 1.6 kg of salad chopped off
@@ -316,7 +316,7 @@ public class HUTransformServiceReceiptCandidatesTests
 		{
 			final List<I_M_HU> siblingsOfCu1 = handlingUnitsDAO.retrieveIncludedHUs(existingTU).stream().filter(hu -> hu.getM_HU_ID() != cu1.getM_HU_ID()).collect(Collectors.toList());
 			assertThat(siblingsOfCu1).hasSize(1);
-			final I_M_HU newlySplitOffCU = siblingsOfCu1.get(0);
+			final I_M_HU newlySplitOffCU = siblingsOfCu1.getFirst();
 			// verify the new cu that was split off cu2 and is now below existingTU
 			final I_M_ReceiptSchedule receiptScheduleForCU2_2 = huReceiptScheduleDAO.retrieveReceiptScheduleForVHU(newlySplitOffCU);
 			assertThat(receiptScheduleForCU2_2).isNotNull();
@@ -325,7 +325,7 @@ public class HUTransformServiceReceiptCandidatesTests
 			final List<I_M_ReceiptSchedule_Alloc> rsas2 = huReceiptScheduleDAO.retrieveAllHandlingUnitAllocations(receiptScheduleForCU2_2, data.helper.getHUContext().getTrxName());
 			final List<I_M_ReceiptSchedule_Alloc> rsas2ForCu2 = rsas2.stream().filter(rsa -> rsa.getM_TU_HU_ID() == existingTU.getM_HU_ID() && rsa.getVHU_ID() == newlySplitOffCU.getM_HU_ID()).collect(Collectors.toList());
 			assertThat(rsas2ForCu2).hasSize(1);
-			assertThat(rsas2ForCu2.get(0).getHU_QtyAllocated()).isEqualByComparingTo(new BigDecimal("1.6"));
+			assertThat(rsas2ForCu2.getFirst().getHU_QtyAllocated()).isEqualByComparingTo(new BigDecimal("1.6"));
 		}
 	}
 
@@ -344,21 +344,21 @@ public class HUTransformServiceReceiptCandidatesTests
 		{ // verify that cu1 and rs1 are properly linked
 			final List<IHUDocument> rs1HuDocument = huDocumentFactoryService.createHUDocuments(data.helper.getHUContext().getCtx(), rs1TableRef.getTableName(), rs1TableRef.getRecord_ID());
 			assertThat(rs1HuDocument).hasSize(1);
-			assertThat(rs1HuDocument.get(0).getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cu1.getM_HU_ID() || hu.getM_HU_ID() == tuWithMixedCUs.getM_HU_ID())).isTrue();
+			assertThat(rs1HuDocument.getFirst().getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cu1.getM_HU_ID() || hu.getM_HU_ID() == tuWithMixedCUs.getM_HU_ID())).isTrue();
 		}
 		// create a standalone-CU
 		final IHUProducerAllocationDestination producer = HUProducerDestination.ofVirtualPI()
 				.setLocatorId(data.defaultLocatorId);
 		data.helper.load(producer, data.helper.pSaladProductId, four, data.helper.uomKg);
 
-		final I_M_HU cu2 = producer.getCreatedHUs().get(0);
+		final I_M_HU cu2 = producer.getCreatedHUs().getFirst();
 
 		final I_M_ReceiptSchedule rs2 = create_receiptSchedule_for_CU(cu2, "4");
 		final TableRecordReference rs2TableRef = TableRecordReference.of(rs2);
 		{ // verify that rs2 and cu2 are properly linked
 			final List<IHUDocument> rs2HuDocument = huDocumentFactoryService.createHUDocuments(data.helper.getHUContext().getCtx(), rs2TableRef.getTableName(), rs2TableRef.getRecord_ID());
 			assertThat(rs2HuDocument).hasSize(1);
-			assertThat(rs2HuDocument.get(0).getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cu2.getM_HU_ID())).isTrue();
+			assertThat(rs2HuDocument.getFirst().getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == cu2.getM_HU_ID())).isTrue();
 		}
 
 		HUTransformService.builderForHUcontext()
@@ -390,7 +390,7 @@ public class HUTransformServiceReceiptCandidatesTests
 			final List<I_M_ReceiptSchedule_Alloc> rsas1 = huReceiptScheduleDAO.retrieveAllHandlingUnitAllocations(receiptScheduleForCU1, data.helper.getHUContext().getTrxName());
 			final List<I_M_ReceiptSchedule_Alloc> rsas1ForCu1 = rsas1.stream().filter(rsa -> rsa.getM_TU_HU_ID() == tuWithMixedCUs.getM_HU_ID() && rsa.getVHU_ID() == cu1.getM_HU_ID()).collect(Collectors.toList());
 			assertThat(rsas1ForCu1).hasSize(1);
-			assertThat(rsas1ForCu1.get(0).getHU_QtyAllocated()).isEqualByComparingTo(new BigDecimal("5"));
+			assertThat(rsas1ForCu1.getFirst().getHU_QtyAllocated()).isEqualByComparingTo(new BigDecimal("5"));
 		}
 		{
 			final I_M_ReceiptSchedule receiptScheduleForCU2 = huReceiptScheduleDAO.retrieveReceiptScheduleForVHU(cu2);
@@ -400,7 +400,7 @@ public class HUTransformServiceReceiptCandidatesTests
 			final List<I_M_ReceiptSchedule_Alloc> rsas2 = huReceiptScheduleDAO.retrieveAllHandlingUnitAllocations(receiptScheduleForCU2, data.helper.getHUContext().getTrxName());
 			final List<I_M_ReceiptSchedule_Alloc> rsas2ForCu2 = rsas2.stream().filter(rsa -> rsa.getM_TU_HU_ID() == tuWithMixedCUs.getM_HU_ID() && rsa.getVHU_ID() == cu2.getM_HU_ID()).collect(Collectors.toList());
 			assertThat(rsas2ForCu2).hasSize(1);
-			assertThat(rsas2ForCu2.get(0).getHU_QtyAllocated()).isEqualByComparingTo(four);
+			assertThat(rsas2ForCu2.getFirst().getHU_QtyAllocated()).isEqualByComparingTo(four);
 		}
 	}
 
@@ -439,10 +439,10 @@ public class HUTransformServiceReceiptCandidatesTests
 		final I_M_HU aggregateTU;
 		{
 			assertThat(createdLUs).hasSize(1);
-			firstLU = createdLUs.get(0);
+			firstLU = createdLUs.getFirst();
 			final List<I_M_HU> aggregateTUs = handlingUnitsDAO.retrieveIncludedHUs(firstLU);
 			assertThat(aggregateTUs).hasSize(1);
-			aggregateTU = aggregateTUs.get(0);
+			aggregateTU = aggregateTUs.getFirst();
 			assertThat(handlingUnitsBL.isAggregateHU(aggregateTU)).isTrue();
 			assertThat(handlingUnitsDAO.retrieveParentItem(aggregateTU).getQty()).isEqualByComparingTo(new BigDecimal("10"));
 
@@ -463,7 +463,7 @@ public class HUTransformServiceReceiptCandidatesTests
 			// verify that aggregateTU and rs are linked via firstLU
 			final List<IHUDocument> rsHuDocument = huDocumentFactoryService.createHUDocuments(data.helper.getHUContext().getCtx(), rsTableRef.getTableName(), rsTableRef.getRecord_ID());
 			assertThat(rsHuDocument).hasSize(1);
-			assertThat(rsHuDocument.get(0).getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == firstLU.getM_HU_ID())).isTrue();
+			assertThat(rsHuDocument.getFirst().getAssignedHandlingUnits().stream().anyMatch(hu -> hu.getM_HU_ID() == firstLU.getM_HU_ID())).isTrue();
 
 			// verify that aggregateTU is linked to one I_M_ReceiptSchedule_Alloc with qty=40
 			final I_M_ReceiptSchedule receiptScheduleForAggregateTU = huReceiptScheduleDAO.retrieveReceiptScheduleForVHU(aggregateTU);
@@ -475,7 +475,7 @@ public class HUTransformServiceReceiptCandidatesTests
 					.filter(rsa -> rsa.getM_TU_HU_ID() == aggregateTU.getM_HU_ID() && rsa.getVHU_ID() == aggregateTU.getM_HU_ID()) // aggregateTU acts both as TU and VHU
 					.collect(Collectors.toList());
 			assertThat(rsas1ForAggregateTUs).hasSize(1);
-			assertThat(rsas1ForAggregateTUs.get(0).getHU_QtyAllocated()).isEqualByComparingTo(new BigDecimal("40"));
+			assertThat(rsas1ForAggregateTUs.getFirst().getHU_QtyAllocated()).isEqualByComparingTo(new BigDecimal("40"));
 		}
 
 		//
@@ -487,7 +487,7 @@ public class HUTransformServiceReceiptCandidatesTests
 		final List<I_M_HU> newCUs = HUTransformService.newInstance(data.helper.getHUContext())
 				.cuToNewCU(aggregateTU, new Quantity(BigDecimal.valueOf(5), data.helper.uomKg));
 		assertThat(newCUs).hasSize(1);
-		final I_M_HU newCU = newCUs.get(0);
+		final I_M_HU newCU = newCUs.getFirst();
 		// newCU does not have any TU component
 		verifyQuantities(new BigDecimal("5"), new BigDecimal("0"), newCU);
 		// the first action destroyed one TU, because one TU is 4kg and we took out 5kg
@@ -501,7 +501,7 @@ public class HUTransformServiceReceiptCandidatesTests
 				.tuToNewLUs(aggregateTU, QtyTU.ofString("2"), piLU_Item_10_IFCOs, false)
 				.getLURecords();
 		assertThat(secondLUs).hasSize(1);
-		final I_M_HU secondLU = secondLUs.get(0);
+		final I_M_HU secondLU = secondLUs.getFirst();
 		// secondLU contains 2 x 4kg = 8kg
 		verifyQuantities(new BigDecimal("8"), new BigDecimal("2"), secondLU);
 		// aggregateTU now contains 6 x 4kg = 24kg
@@ -513,7 +513,7 @@ public class HUTransformServiceReceiptCandidatesTests
 		// "Split off 1 TU on its own, without new LU"
 		final List<I_M_HU> singleNewTUs = HUTransformService.newInstance(data.helper.getHUContext()).tuToNewTUs(aggregateTU, QtyTU.ONE).getAllTURecords();
 		assertThat(singleNewTUs).hasSize(1);
-		final I_M_HU singleNewTU = singleNewTUs.get(0);
+		final I_M_HU singleNewTU = singleNewTUs.getFirst();
 		verifyQuantities(new BigDecimal("4"), new BigDecimal("1"), singleNewTU);
 		// aggregateTU now contains 5 x 4kg = 20kg
 		verifyQuantities(new BigDecimal("20"), new BigDecimal("5"), aggregateTU);
@@ -626,7 +626,7 @@ public class HUTransformServiceReceiptCandidatesTests
 		final List<I_M_HU> createdCUs = producer.getCreatedHUs();
 		assertThat(createdCUs).hasSize(1);
 
-		final I_M_HU cuToSplit = createdCUs.get(0);
+		final I_M_HU cuToSplit = createdCUs.getFirst();
 		return cuToSplit;
 	}
 
@@ -643,10 +643,10 @@ public class HUTransformServiceReceiptCandidatesTests
 
 		assertThat(createdTUs).hasSize(1);
 
-		final List<I_M_HU> createdCUs = handlingUnitsDAO.retrieveIncludedHUs(createdTUs.get(0));
+		final List<I_M_HU> createdCUs = handlingUnitsDAO.retrieveIncludedHUs(createdTUs.getFirst());
 		assertThat(createdCUs).hasSize(1);
 
-		final I_M_HU cuToSplit = createdCUs.get(0);
+		final I_M_HU cuToSplit = createdCUs.getFirst();
 
 		return cuToSplit;
 	}
