@@ -121,9 +121,9 @@ public class HUTraceRepositoryTests
 
 		final List<HUTraceEvent> result = huTraceRepository.query(query);
 		assertThat(result).hasSize(1);
-		assertThat(result.get(0).getHuTraceEventId()).isPresent();
-		assertThat(result.get(0).getVhuId().getRepoId()).isEqualTo(12);
-		assertThat(result.get(0).getOrgId().getRepoId()).isEqualTo(13);
+		assertThat(result.getFirst().getHuTraceEventId()).isPresent();
+		assertThat(result.getFirst().getVhuId().getRepoId()).isEqualTo(12);
+		assertThat(result.getFirst().getOrgId().getRepoId()).isEqualTo(13);
 
 		// add an equal event, again
 		huTraceRepository.addEvent(HUTraceEvent.builder()
@@ -139,7 +139,7 @@ public class HUTraceRepositoryTests
 
 		final List<HUTraceEvent> result2 = huTraceRepository.query(query);
 		assertThat(result2).hasSize(1); // still just one!
-		assertThat(result.get(0)).isEqualTo(result2.get(0));
+		assertThat(result.getFirst()).isEqualTo(result2.getFirst());
 	}
 
 	/**
@@ -165,9 +165,9 @@ public class HUTraceRepositoryTests
 		final List<HUTraceEvent> result = huTraceRepository.query(query);
 		assertThat(result).hasSize(1);
 
-		assertThat(result.get(0).getTopLevelHuId().getRepoId()).isEqualTo(2);
-		assertThat(result.get(0).getVhuId().getRepoId()).isEqualTo(12);
-		assertThat(result.get(0).getVhuSourceId().getRepoId()).isEqualTo(13);
+		assertThat(result.getFirst().getTopLevelHuId().getRepoId()).isEqualTo(2);
+		assertThat(result.getFirst().getVhuId().getRepoId()).isEqualTo(12);
+		assertThat(result.getFirst().getVhuSourceId().getRepoId()).isEqualTo(13);
 	}
 
 	/**
@@ -201,8 +201,8 @@ public class HUTraceRepositoryTests
 		final List<HUTraceEvent> result = huTraceRepository.query(query);
 		assertThat(result).hasSize(1);
 
-		assertThat(result.get(0).getVhuId().getRepoId()).isEqualTo(13);
-		assertThat(result.get(0).getVhuSourceId().getRepoId()).isEqualTo(14);
+		assertThat(result.getFirst().getVhuId().getRepoId()).isEqualTo(13);
+		assertThat(result.getFirst().getVhuSourceId().getRepoId()).isEqualTo(14);
 	}
 
 	@Test
@@ -386,7 +386,7 @@ public class HUTraceRepositoryTests
 		// query with the huId of the first event from the "first" group.
 		// that means that we expect a record for each event event we added (because there is one directly preceding group and one indirectly preceding group).
 		final List<HUTraceEvent> result = huTraceRepository.query(HUTraceEventQuery.builder()
-																		  .vhuId(events.get(0).getVhuId())
+																		  .vhuId(events.getFirst().getVhuId())
 																		  .recursionMode(RecursionMode.FORWARD)
 																		  .build());
 		result.sort(Comparator.comparing(HUTraceEvent::getEventTime));
