@@ -345,7 +345,7 @@ import java.util.TreeMap;
 			}
 		}
 
-		final BigDecimal lastInterval = percentages.get(percentages.size() - 1);
+		final BigDecimal lastInterval = percentages.getLast();
 		return feeProductPercentage2fee.get(lastInterval);
 	}
 
