@@ -52,7 +52,7 @@ public abstract class TestQualityDiscountPercentOverrideToZero extends AbstractT
 	@Override
 	protected List<I_M_InOutLine> step_createInOutLines(List<I_C_Invoice_Candidate> invoiceCandidates)
 	{
-		final I_C_Invoice_Candidate ic = invoiceCandidates.get(0);
+		final I_C_Invoice_Candidate ic = invoiceCandidates.getFirst();
 
 		final StockQtyAndUOMQty qtysDelivered_90 = StockQtyAndUOMQtys.create(new BigDecimal("90"), productId, new BigDecimal("900"), uomId);
 		final StockQtyAndUOMQty qtysDelivered_10 = StockQtyAndUOMQtys.create(TEN, productId, HUNDRET, uomId);
@@ -120,7 +120,7 @@ public abstract class TestQualityDiscountPercentOverrideToZero extends AbstractT
 	{
 		super.step_validate_after_aggregation(invoiceCandidates, inOutLines, invoices);
 
-		final IInvoiceHeader invoice1 = invoices.remove(0);
+		final IInvoiceHeader invoice1 = invoices.removeFirst();
 		final List<IInvoiceLineRW> invoiceLines1 = getInvoiceLines(invoice1);
 		final IInvoiceLineRW il1 = getSingleForInOutLine(invoiceLines1, iol11);
 
